--- a/traduire/src/App.css
+++ b/traduire/src/App.css
@@ -1,13 +1,26 @@
 * {
   font-family: 'Roboto', sans-serif;
 }
+body {
+  width:100%;
+  height: 100vh;
+  background-image:  linear-gradient( rgba(255, 255, 255, 0.7) 10%,rgba(255, 0, 0, 0.2) 100%), url('./images/redbg.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+}
+
 .appContainer {
-  background-image:  linear-gradient( rgba(255, 255, 255, 0.6) 10%,rgba(0,0,0,0.6) 100%), url('./images/1781.jpg');
+  background-image:  linear-gradient( rgba(255, 255, 255, 0.5) 10%,rgba(0,0,0,0.5) 100%), url('./images/1781.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
   height: calc(100vh - 56px);
+}
+#mainpic {
+  opacity: .8;
 }
 .appContainer h1{
   padding-top: 2rem;
@@ -37,11 +50,16 @@
   height: 300px;
 }
 textarea { resize: none; }
-
+.errorBox {
+  margin-top: 1rem;
+  width: 198px;
+  color:rgb(255, 255, 255);
+}
 .navBar, .navBar a {
   background-color: #31bae0;
   color: white;
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -69,6 +87,11 @@ textarea { resize: none; }
 .App-link {
   color: #61dafb;
 }
+.fa-robot {
+  font-size: 6rem;
+  margin-right: 4rem;
+  margin-top: 2rem;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -86,18 +109,20 @@ textarea { resize: none; }
   flex-direction: column;
 }
 
+
 .firstPage {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.firstPage-pic {
-  margin-right: 5rem;
-}
 
+.firstPage-words {
+  margin-top: 2.5rem;
+}
 .firstPage-btns {
   display: flex;
-  margin-left: 25rem;
+  margin-top: 3rem;
 }
 
 .btn-login a, .btn-register a{
@@ -110,7 +135,18 @@ textarea { resize: none; }
 }
 .btn-login {
   margin-right: 4rem;
+  background-color: #31bae0;
 }
+.btn-login:hover {
+  background-color: #36859b;
+}
+.btn-register:hover {
+  background-color: rgb(223, 186, 24);
+}
+.card {
+  width: 50%;
+}
+
 
 .myAccountContainer {
   background-image:  linear-gradient( rgba(255, 255, 255, 0.6) 10%,rgba(0,0,0,0.6) 100%), url('./images/3428.jpg');
@@ -133,4 +169,88 @@ textarea { resize: none; }
   height: 450px;
   width: 40%;
   margin-bottom: 16rem;
+}
+
+.lSelector {
+  margin-left: 0.7rem;
+  width: 10rem;
+}
+.rSelector {
+  margin-left: 0.7rem;
+  width: 10rem;
+}
+
+.navBarIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 0;
+
+  font-size: 1.4em;
+  margin: 0;
+}
+
+.logoutButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1200px){
+  .mainContainer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .firstPage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .firstPage-btns {
+    display: flex;
+    margin: 4rem auto;
+  }
+  .firstPage-words {
+    text-align: center;
+  }
+  .firstPage-pic {
+    margin-right: 0 auto !important;
+  }
+  #mainpic {width: 100%;}
+  .input-container {
+    flex-direction: column;
+  }
+  .appContainer {
+    background-image:  linear-gradient( rgba(255, 255, 255, 0.5) 10%,rgba(0,0,0,0.5) 100%), url('./images/1781.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+  #mainInput, #mainOutput{
+    width: 370px;
+    height: 200px;
+  }
+  .eachInputContainer {
+    width: 50%;
+    margin-left: 3rem;
+  }
+  .card {
+    width: 100%;
+  }
+  .myAccoutInnerContainer { 
+    background-image:  linear-gradient( rgba(255, 255, 255, 0.9) 10%,rgba(255, 255, 255, 0.9) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 450px;
+    width: 80%;
+    margin: 0!important;
+  }
 }
