--- a/traduire/src/App.css
+++ b/traduire/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 * {
   font-family: 'Roboto', sans-serif;
 }
@@ -138,6 +139,18 @@ textarea { resize: none; }
   color: #31bae0;
   font-weight: bold;
 }
+.flashMessage {
+  font-size: 2.2rem;
+  color: #31bae0;
+  font-weight: bold;
+}
+.cardlistContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 3rem;
+  justify-content: center;
+}
 .firstPage-words {
   margin-top: 2.5rem;
 }
@@ -167,8 +180,18 @@ textarea { resize: none; }
 .card {
   width: 50%;
 }
-
-
+.mainHeading {
+  font-size: 6.5rem;
+}
+.loginContainer {
+  width: 30%;
+}
+.btnls {
+  margin-top: 1.7rem;
+}
+.dropdown {
+  padding-right: 2.2rem;
+}
 .myAccountContainer {
   background-image:  linear-gradient( rgba(255, 255, 255, 0.6) 10%,rgba(0,0,0,0.6) 100%), url('./images/3428.jpg');
   background-repeat: no-repeat;
@@ -191,7 +214,10 @@ textarea { resize: none; }
   width: 40%;
   margin-bottom: 16rem;
 }
-
+.myAccoutInnerContainer h1, .myAccoutInnerContainer h2{
+  font-family: 'Indie Flower', cursive!important;
+  font-size: 3.2rem;
+}
 .lSelector {
   margin-left: 0.7rem;
   width: 10rem;
@@ -217,7 +243,15 @@ textarea { resize: none; }
   justify-content: center;
   align-items: center;
 }
-
+.editBtn {
+  background-color: #31bae0;
+  border: #36859b;
+} 
+@media only screen and (max-width: 900px){
+  .input-container {
+    flex-direction: column;
+  }
+}
 @media only screen and (max-width: 1200px){
   .mainContainer {
     display:flex;
@@ -225,11 +259,18 @@ textarea { resize: none; }
     align-items: center;
     flex-direction: column;
   }
+  .mainHeading {
+    font-size: 4rem;
+  }
   .firstPage {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+  }
+  .dropdown {
+    padding: 0;
+    margin: 0;
   }
   .firstPage-btns {
     display: flex;
@@ -242,16 +283,14 @@ textarea { resize: none; }
     margin-right: 0 auto !important;
   }
   #mainpic {width: 100%;}
-  .input-container {
-    flex-direction: column;
-  }
+
   .appContainer {
     background-image:  linear-gradient( rgba(255, 255, 255, 0.5) 10%,rgba(0,0,0,0.5) 100%), url('./images/1781.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
   #mainInput, #mainOutput{
     width: 370px;
@@ -285,5 +324,26 @@ textarea { resize: none; }
     order: 1;
     margin-bottom: 2.4rem;
     width: 70%;
+  }
+  .loginContainer {
+    width: 85%;
+  }
+  #mainInput, #mainOutput {
+    width: 270px;
+  }
+  #mainOutput {
+    margin-bottom: 3rem;
+  }
+  .mainBtn {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    width: 500px;
+  }
+  #navbarDropdown {
+    margin: 0;
+    padding: 0;
   }
 }
